config/lyrics-api-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lyrics-api
  labels:
    app: lyrics-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lyrics-api
  template:
    metadata:
      name: lyrics-api
      labels:
        app: lyrics-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - lyrics-api
              topologyKey: "kubernetes.io/hostname"

      containers:
        - name: lyrics-api
          image: gcr.io/py-kubernetes-microservices/lyrics-api:v2
          ports:
            - containerPort: 8080

          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 2048Mi
              cpu: 1

      nodeSelector:
        cloud.google.com/gke-nodepool: api-pool
