config/lyrics-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lyrics-api-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /lyrics-api
        backend:
          serviceName: lyrics-api
          servicePort: 80

      - path: /
        backend:
          serviceName: lyrics-api
          servicePort: 80
